@@ -59,6 +59,7 @@ Parameters:
     "path": "diaspora-client",
     "path_with_namespace": "diaspora/diaspora-client",
     "issues_enabled": true,
+    "open_issues_count": 1,
     "merge_requests_enabled": true,
     "builds_enabled": true,
     "wiki_enabled": true,
@@ -101,6 +102,7 @@ Parameters:
     "path": "puppet",
     "path_with_namespace": "brightbox/puppet",
     "issues_enabled": true,
+    "open_issues_count": 1,
     "merge_requests_enabled": true,
     "builds_enabled": true,
     "wiki_enabled": true,
@@ -192,6 +194,7 @@ Parameters:
   "path": "diaspora-project-site",
   "path_with_namespace": "diaspora/diaspora-project-site",
   "issues_enabled": true,
+  "open_issues_count": 1,
   "merge_requests_enabled": true,
   "builds_enabled": true,
   "wiki_enabled": true,
